[tool.poetry]
name = "documentation-samples-python"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"
packages = [{ include = "**/*.py", from = "."  }]

[tool.poetry.dependencies]
python = "^3.7"
temporalio = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "black ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}]
