[tool.poetry]
name = "documentation-samples-python"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"
packages = [{ include = "**/*.py", from = "."  }]

[tool.poetry.dependencies]
python = "^3.7"
temporalio = "^1.3.0"


[tool.poetry.dev-dependencies]
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff format ."}]
